0025369: Visualization, Image_AlienPixMap - handle UTF-8 names in image read/save operations on Windows

Test-case for issue #25369